1. Added logger 2. Cleaned up code